--- a/style/css.css
+++ b/style/css.css
@@ -554,6 +554,15 @@ li{
 			display: block;
 			clear: both;
 		}
+.time-to-buy-content>ul>li:nth-child(1){
+	width: 250px;
+	height: 400px;
+	background-color: red;
+}
+.time-to-buy-content>ul>li:nth-child(1)~li{
+	width: 400px;
+	height: 200px;
+}
 		.feedback-box{
 			background-color: #f5f5f5;
 			height: 300px;
@@ -718,7 +727,7 @@ li{
 	background-color: #7c724e;
 	top: 0;
 	background: rgba(0,0,0,0.7); 
-	 display: none;  
+	display: none;  
 
 }
 .login-box{
@@ -727,11 +736,12 @@ li{
 	background-color: #ffffff;
 	position: relative;
 	padding-top: 5px;
+	
 }
+
+
 .login-way{
 	width: 360px;
-	
-	/* background-color: pink; */
 	margin: 0 auto;
 	margin-top: 20px;
 }
@@ -748,12 +758,13 @@ li{
 	display: block;
 	width: 100%;
 }
-.login-box .icon-cuohao{
+.login .icon-cuohao{
 	position: absolute;
 	top: 5px;
 	right: 5px;
 	font-size: 2em;
 	color: #7c724e;
+
 }
 .mobile-phone-login{
 	width: 300px;
@@ -862,8 +873,11 @@ li{
 	font-size: 1.8em;
 	position: absolute;
 	top: 10px;
+	right: -28px;
 	color: #cccccc;
+	display: none;
 }
+
 .email-input-box::after{
 	content: "";
 	display: block;
@@ -894,23 +908,14 @@ li{
 	margin-left: 5px;
 	height: 2em;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.email-input-box input:focus+a>i{
+		display: block;
+}
+.login-button-box{
+	margin: 50px auto;
+}
 .login-button-box .login-button{
-	margin: 60px auto;
+	
 	width: 300px;
 	line-height: 2em;
 	border: none;
@@ -919,6 +924,14 @@ li{
 	color: #ffffff;
 	border-radius: 5px;
 	margin-left: 40px;
+}
+.registered-agreement{
+	margin: 40px;
+padding-bottom: 40px;
+	margin-top: 10px;
+	font-size: 12px;
+	color: #777777;
+
 }
 .login-button>a{
 	color: #ffffff;
@@ -945,7 +958,7 @@ li{
 .login-foot-left>ul>li i{
 		font-size: 1.6em;
 	}
-	.login-foot ul>li:hover>a{
+.login-foot ul>li:hover>a{
 		color: #7c724e;
 	}
 .login-foot-right{
@@ -954,4 +967,48 @@ li{
 }
 .login-foot-right>ul>li{
 	margin-left: 10px;
+}
+.registered-box{
+	width: 380px;
+	margin: 150px auto;
+	background-color: #ffffff;
+	position: relative;
+	padding-top: 5px;
+	display: none;
+}
+.registered-way{
+	width: 360px;
+	margin: 0 auto;
+	margin-top: 20px;
+	margin-bottom: 50px;
+}
+.registered-way::after{
+	content: "";
+	display: block;
+	clear: both;
+}
+.registered-way>div{
+	float: left;
+}
+.registered-header-right a:hover{
+	color: #7c724e;
+}
+.registered-way>div:nth-child(1){
+	font-size: 1.4em;
+	line-height: 1.4em;
+	width: 150px;
+	text-align: center;
+}
+.registered-way>div:nth-child(2){
+	width: 160px;
+	
+	
+	margin-left: 40px;
+
+}
+.registered-way>div:nth-child(2) li{
+	text-align: center;
+	font-size: 1em;
+	line-height: 2em;
+	width: 80px;
 }
